# BzAlnJobLstingWebScraper

./: .gitignore  README.md  pyproject.toml  scraper.py
src/: main.py
src/scraper/: scraper.py
src/scraper/utils/: logger.py
