[project]
name = "booz-allen-scraper"
version = "0.1.0"
description = "A web scraper for Booz Allen careers."
authors = [
    {name = "hs223nr",email = "hs223nr@student.lnu.se"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
